--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-TOKEN="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"
+TOKEN="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"
+# "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"
