--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-TOKEN="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"
+TOKEN="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"
+# "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"
 # "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"
