--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-TOKEN="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"
+# TOKEN="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"
+TOKEN_D=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
